# codex2opencode

./: .gitignore  README.md  pyproject.toml  server.py
skills/codex-opencode-bridge/: SKILL.md
skills/codex-opencode-bridge/agents/: openai.yaml
tests/: test_server.py
